Added two inputs and changed p tags to labels. Wrapped these sections in a form

--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     </head>
     <body>
         <div id="tip-container">
-           <h1>Tip Calculator</h1> 
-           <p>Enter the bill amount and tip percentage to calculate the total.</p>
-           <p>Bill amount:</p>
-           <p>Tip percentage:</p>
-           <p>Total: </p>
+            <h1>Tip Calculator</h1> 
+            <p>Enter the bill amount and tip percentage to calculate the total.</p>
+
+            <form>
+                <label>Bill amount:</label>
+                <input type="text" name="bill" id="bill">
+           
+                <label>Tip percentage:</label>
+                <input type="text" name="tip-percent" >
+            </form> 
+
+            <p>Total: </p>
         </div> 
     </body>
 </html>
