Removed form for flex ease. setup style for button and spacing

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
             <h1>Tip Calculator</h1> 
             <p>Enter the bill amount and tip percentage to calculate the total.</p>
 
-            <form>
                 <label>Bill amount:</label>
                 <input type="text" name="bill" id="bill">
-           
+
                 <label>Tip percentage:</label>
                 <input type="text" name="tip-percent" >
-            </form> 
+                <button type="button">Calculate</button>
 
             <p>Total: </p>
         </div> 
