--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <p>Enter the bill amount and tip percentage to calculate the total.</p>
 
                 <label>Bill amount:</label>
-                <input type="text" name="bill" id="bill">
+                <input type="number" name="bill" id="bill">
 
                 <label>Tip percentage:</label>
-                <input type="text" name="tip-percent" >
+                <input type="number" name="tip-percent" >
                 <button type="button">Calculate</button>
 
             <p>Total: </p>
