init variables and setup onlcick function.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
                 <input type="number" name="bill" id="bill">
 
                 <label>Tip percentage:</label>
-                <input type="number" name="tip-percent" >
-                <button type="button">Calculate</button>
+                <input type="number" id="tip-percent" name="tip-percent" >
+                <button id="calc-button" type="button">Calculate</button>
 
-            <p>Total: </p>
+            <p id="tota" >Total: </p>
         </div> 
     </body>
+    <script src="index.js"></script>
 </html>
