setup tip calcs and tested via console log. fixed total typo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input type="number" id="tip-percent" name="tip-percent" >
                 <button id="calc-button" type="button">Calculate</button>
 
-            <p id="tota" >Total: </p>
+            <p id="total" >Total: </p>
         </div> 
     </body>
     <script src="index.js"></script>
