Reformatted Total section in HTML with a div. Setup JSscript to set total value

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <input type="number" id="tip-percent" name="tip-percent" >
                 <button id="calc-button" type="button">Calculate</button>
 
-            <p id="total" >Total: </p>
+            <div id="total-container">Total: <p id="total"></p></div>
+
         </div> 
     </body>
     <script src="index.js"></script>
